Fixed input colours in dark mode.

--- a/style.css
+++ b/style.css
@@ -1055,7 +1055,7 @@ ol.comment-list {
 }
 
 textarea#comment {
-	background-color: #fff;
+	background-color: var(--bg);
   border: 2px solid var(--border);
   border-radius: 4px;
   height: 96px;
@@ -1066,7 +1066,7 @@ textarea#comment {
 
 input#author,
 input#email {
-	background-color: #fff;
+	background-color: var(--bg);
 	border: 2px solid var(--border);
 	border-radius: 4px;
 	padding-left: 5px;
@@ -1104,6 +1104,7 @@ img.avatar {
   max-width: 700px;
   margin: 0 auto;
   background: var(--code);
+  color: var(--main);
   padding: 25px;
   outline: dashed 2px var(--main);
   outline-offset: -8px;
@@ -1115,7 +1116,9 @@ img.avatar {
 }
 
 .swp-form-cont-2222 input[type="text"] {
-  background: #fff;
+  background: var(--bg);
+  color: var(--main) !important;
+  border: 2px solid var(--border) !important;
   font-size: 14px;
 }
 
